--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Install security tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit safety
+
+      - name: Run Bandit (static security checks)
+        run: |
+          # Run Bandit against the application package
+          bandit -r app -lll
+
+      - name: Run Safety (dependency vulnerability check)
+        run: |
+          # Check requirements for known vulnerabilities
+          safety check -r requirements.txt --full-report
       - name: Run tests
         run: |
           pytest -q --disable-warnings --maxfail=1
