--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  lint:
-    name: Lint (flake8)
+  code-quality:
+    name: Code Quality (black, isort, flake8, mypy)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -16,17 +16,101 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
-      - name: Install flake8
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
-      - name: Run flake8
+          pip install black isort flake8 flake8-docstrings mypy types-redis types-requests
+      - name: Check formatting with black
         run: |
-          flake8 . --max-line-length=120 || true
+          black --check app/ tests/ workers/
+      - name: Check import sorting with isort
+        run: |
+          isort --check-only app/ tests/ workers/
+      - name: Lint with flake8
+        run: |
+          flake8 app/ tests/ workers/ --max-line-length=100 --extend-ignore=E203,W503
+      - name: Type check with mypy
+        run: |
+          mypy app/ workers/ --ignore-missing-imports --check-untyped-defs
+
+  complexity-check:
+    name: Complexity Analysis
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install radon
+        run: |
+          python -m pip install --upgrade pip
+          pip install radon
+      - name: Check complexity
+        run: |
+          radon cc app/ workers/ -a -nb --total-average
+          # Fail if average complexity is too high
+          radon cc app/ workers/ -nc 10
+
+  dead-code-check:
+    name: Dead Code Detection
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install vulture
+        run: |
+          python -m pip install --upgrade pip
+          pip install vulture
+      - name: Find dead code
+        run: |
+          vulture app/ workers/ --min-confidence 80 || true
+
+  security-scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install security tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit safety
+      - name: Run Bandit (static security checks)
+        run: |
+          bandit -r app/ workers/ -ll
+      - name: Run Safety (dependency vulnerability check)
+        run: |
+          safety check -r requirements.txt --full-report || true
+
+  slop-check:
+    name: AI Slop Pattern Detection
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check for print statements
+        run: |
+          if grep -r "print(" app/ workers/ --include="*.py" | grep -v "# noqa"; then
+            echo "❌ Found print() statements in production code"
+            exit 1
+          fi
+          echo "✅ No print statements found"
+      - name: Check for TODO without issue reference
+        run: |
+          if grep -r "TODO" app/ workers/ --include="*.py" | grep -v "TODO(#" | grep -v "# noqa"; then
+            echo "⚠️  Found TODO without issue reference"
+          fi
 
   tests:
     name: Tests (pytest)
     runs-on: ubuntu-latest
+    needs: [code-quality, complexity-check, security-scan]
     strategy:
       matrix:
         python-version: [3.12]
@@ -47,20 +131,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Install security tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install bandit safety
-
-      - name: Run Bandit (static security checks)
-        run: |
-          # Run Bandit against the application package
-          bandit -r app -lll
-
-      - name: Run Safety (dependency vulnerability check)
-        run: |
-          # Check requirements for known vulnerabilities
-          safety check -r requirements.txt --full-report
       - name: Run tests
         run: |
           pytest -q --disable-warnings --maxfail=1
