--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,27 @@ SQLAlchemy
 alembic
 
 # -- Caching & State --
-# Used for rate limiting and idempotencelery==5.3.6
+# Used for rate limiting and idempotency
 redis==5.0.1
 sentry-sdk==1.40.0
 stripe==8.1.0
 celery
+slowapi
+strawberry-graphql[fastapi]
+
+# Development dependencies
+black
+isort
+mypy
+pylint
+flake8
+flake8-docstrings
+radon
+vulture
+bandit
+pre-commit
+types-redis
+types-requests
 
 # -- Authentication & Security --
 python-jose[cryptography]
